fixed navbar collapse so it opens

--- a/css/styles.css
+++ b/css/styles.css
@@ -182,4 +182,8 @@ p {
     #title {
         text-align: center;
     }
+
+    .nav-item {
+        text-align: right;
+    }
 }
